# Prograthon_repository

./: README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
Maraton C++/src/: Equipo.cpp  Equipo.h  Problema.cpp  Problema.h  main.cpp
PPS C++/backend/: CMakeLists.txt  build.bat
PPS C++/backend/src/: main.cpp
PPS C++/frontend/: package-lock.json  package.json
PPS C++/frontend/src/: index.css
PPS C++/frontend/src/components/: CreateMarathon.jsx  Dashboard.jsx  EditProfile.jsx  Login.jsx  MarathonDetail.jsx  ProblemDetail.jsx
PPS C++/frontend/src/contexts/: AuthContext.js
PPS C++/frontend/src/services/: api.js
PPS-CPP/frontend/: .eslintrc.json  package-lock.json  package.json
PPS-CPP/frontend/public/: index.html
PPS-CPP/frontend/src/: App.js
PPS-CPP/frontend/src/components/: CreateProblem.jsx  MarathonList.jsx  MyMarathons.jsx  ProblemList.jsx  Register.jsx  UserList.jsx
Prograthon/server/cpp/: AlgoritmoGenetico.cpp  AlgoritmoGenetico.h  CMakeLists.txt  db_connection.cpp  db_connection.h  main.cpp
